--- a/blackjack.ipynb
+++ b/blackjack.ipynb
@@ -1975,6 +1975,315 @@
    "source": [
     "q_learn.eval(episodes=1000)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "4877295c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "from collections import deque\n",
+    "import random\n",
+    "\n",
+    "class QNetwork(nn.Module):\n",
+    "    def __init__(self, state_dim, action_dim):\n",
+    "        super(QNetwork, self).__init__()\n",
+    "        self.fc1 = nn.Linear(state_dim, 128)\n",
+    "        self.fc2 = nn.Linear(128, 128)\n",
+    "        self.fc3 = nn.Linear(128, action_dim)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = torch.relu(self.fc1(x))\n",
+    "        x = torch.relu(self.fc2(x))\n",
+    "        return self.fc3(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "2c7df067",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "class DDQNTrainer:\n",
+    "    def __init__(self, env, buffer_size=100000, batch_size=64,\n",
+    "                 gamma=0.99, lr=1e-3, tau=1e-3,\n",
+    "                 epsilon_start=1.0, epsilon_end=0.01, epsilon_decay=0.995,\n",
+    "                 target_update_every=100):\n",
+    "\n",
+    "        self.env = env\n",
+    "        self.state_dim = env.observation_space.shape[0]\n",
+    "        self.action_dim = env.action_space.n\n",
+    "\n",
+    "        self.q_net = QNetwork(self.state_dim, self.action_dim)\n",
+    "        self.target_net = QNetwork(self.state_dim, self.action_dim)\n",
+    "        self.target_net.load_state_dict(self.q_net.state_dict())\n",
+    "\n",
+    "        self.optimizer = torch.optim.Adam(self.q_net.parameters(), lr=lr)\n",
+    "        self.criterion = nn.MSELoss()\n",
+    "\n",
+    "        self.buffer = deque(maxlen=buffer_size)\n",
+    "        self.batch_size = batch_size\n",
+    "        self.gamma = gamma\n",
+    "        self.tau = tau\n",
+    "\n",
+    "        self.epsilon = epsilon_start\n",
+    "        self.epsilon_end = epsilon_end\n",
+    "        self.epsilon_decay = epsilon_decay\n",
+    "\n",
+    "        self.target_update_every = target_update_every\n",
+    "        self.learn_step = 0\n",
+    "\n",
+    "    def select_action(self, state):\n",
+    "        if random.random() < self.epsilon:\n",
+    "            return self.env.action_space.sample()\n",
+    "        state = torch.tensor(state, dtype=torch.float32).unsqueeze(0)\n",
+    "        with torch.no_grad():\n",
+    "            q_values = self.q_net(state)\n",
+    "        return torch.argmax(q_values).item()\n",
+    "\n",
+    "    def store(self, state, action, reward, next_state, done):\n",
+    "        self.buffer.append((state, action, reward, next_state, done))\n",
+    "\n",
+    "    def sample_batch(self):\n",
+    "        batch = random.sample(self.buffer, self.batch_size)\n",
+    "        state, action, reward, next_state, done = zip(*batch)\n",
+    "        return (torch.tensor(state, dtype=torch.float32),\n",
+    "                torch.tensor(action, dtype=torch.int64).unsqueeze(1),\n",
+    "                torch.tensor(reward, dtype=torch.float32).unsqueeze(1),\n",
+    "                torch.tensor(next_state, dtype=torch.float32),\n",
+    "                torch.tensor(done, dtype=torch.float32).unsqueeze(1))\n",
+    "\n",
+    "    def train_step(self):\n",
+    "        if len(self.buffer) < self.batch_size:\n",
+    "            return\n",
+    "\n",
+    "        states, actions, rewards, next_states, dones = self.sample_batch()\n",
+    "\n",
+    "        # Current Q estimates\n",
+    "        q_values = self.q_net(states).gather(1, actions)\n",
+    "\n",
+    "        # DDQN: Use main network to choose actions, target network to evaluate\n",
+    "        next_actions = self.q_net(next_states).argmax(1, keepdim=True)\n",
+    "        next_q_values = self.target_net(next_states).gather(1, next_actions)\n",
+    "\n",
+    "        target_q = rewards + (1 - dones) * self.gamma * next_q_values\n",
+    "\n",
+    "        loss = self.criterion(q_values, target_q.detach())\n",
+    "\n",
+    "        self.optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        self.optimizer.step()\n",
+    "\n",
+    "        # Update target network\n",
+    "        if self.learn_step % self.target_update_every == 0:\n",
+    "            self.target_net.load_state_dict(self.q_net.state_dict())\n",
+    "        self.learn_step += 1\n",
+    "\n",
+    "    def train(self, episodes=500, max_timesteps=500):\n",
+    "        episode_rewards = []\n",
+    "\n",
+    "        for episode in range(episodes):\n",
+    "            state, _ = self.env.reset()\n",
+    "            total_reward = 0\n",
+    "\n",
+    "            for _ in range(max_timesteps):\n",
+    "                action = self.select_action(state)\n",
+    "                next_state, reward, terminated, truncated, _ = self.env.step(action)\n",
+    "                done = terminated or truncated\n",
+    "\n",
+    "                self.store(state, action, reward, next_state, done)\n",
+    "                self.train_step()\n",
+    "\n",
+    "                state = next_state\n",
+    "                total_reward += reward\n",
+    "                if done:\n",
+    "                    break\n",
+    "\n",
+    "            self.epsilon = max(self.epsilon * self.epsilon_decay, self.epsilon_end)\n",
+    "            episode_rewards.append(total_reward)\n",
+    "\n",
+    "            if (episode + 1) % 10 == 0:\n",
+    "                avg_reward = np.mean(episode_rewards[-10:])\n",
+    "                print(f\"Episode {episode + 1}, Avg Reward: {avg_reward:.2f}, Epsilon: {self.epsilon:.2f}\")\n",
+    "\n",
+    "        return episode_rewards"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "670c37bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode 10, Avg Reward: 21.70, Epsilon: 0.95\n",
+      "Episode 20, Avg Reward: 14.20, Epsilon: 0.90\n",
+      "Episode 30, Avg Reward: 20.70, Epsilon: 0.86\n",
+      "Episode 40, Avg Reward: 22.00, Epsilon: 0.82\n",
+      "Episode 50, Avg Reward: 38.40, Epsilon: 0.78\n",
+      "Episode 60, Avg Reward: 38.50, Epsilon: 0.74\n",
+      "Episode 70, Avg Reward: 35.60, Epsilon: 0.70\n",
+      "Episode 80, Avg Reward: 22.70, Epsilon: 0.67\n",
+      "Episode 90, Avg Reward: 51.80, Epsilon: 0.64\n",
+      "Episode 100, Avg Reward: 82.20, Epsilon: 0.61\n",
+      "Episode 110, Avg Reward: 58.60, Epsilon: 0.58\n",
+      "Episode 120, Avg Reward: 96.70, Epsilon: 0.55\n",
+      "Episode 130, Avg Reward: 68.70, Epsilon: 0.52\n",
+      "Episode 140, Avg Reward: 103.90, Epsilon: 0.50\n",
+      "Episode 150, Avg Reward: 54.00, Epsilon: 0.47\n",
+      "Episode 160, Avg Reward: 35.60, Epsilon: 0.45\n",
+      "Episode 170, Avg Reward: 32.50, Epsilon: 0.43\n",
+      "Episode 180, Avg Reward: 69.60, Epsilon: 0.41\n",
+      "Episode 190, Avg Reward: 78.80, Epsilon: 0.39\n",
+      "Episode 200, Avg Reward: 59.60, Epsilon: 0.37\n",
+      "Episode 210, Avg Reward: 92.60, Epsilon: 0.35\n",
+      "Episode 220, Avg Reward: 148.00, Epsilon: 0.33\n",
+      "Episode 230, Avg Reward: 154.10, Epsilon: 0.32\n",
+      "Episode 240, Avg Reward: 134.60, Epsilon: 0.30\n",
+      "Episode 250, Avg Reward: 345.00, Epsilon: 0.29\n",
+      "Episode 260, Avg Reward: 359.70, Epsilon: 0.27\n",
+      "Episode 270, Avg Reward: 292.10, Epsilon: 0.26\n",
+      "Episode 280, Avg Reward: 224.90, Epsilon: 0.25\n",
+      "Episode 290, Avg Reward: 277.30, Epsilon: 0.23\n",
+      "Episode 300, Avg Reward: 184.80, Epsilon: 0.22\n",
+      "Episode 310, Avg Reward: 218.80, Epsilon: 0.21\n",
+      "Episode 320, Avg Reward: 153.70, Epsilon: 0.20\n",
+      "Episode 330, Avg Reward: 212.80, Epsilon: 0.19\n",
+      "Episode 340, Avg Reward: 172.70, Epsilon: 0.18\n",
+      "Episode 350, Avg Reward: 289.30, Epsilon: 0.17\n",
+      "Episode 360, Avg Reward: 305.60, Epsilon: 0.16\n",
+      "Episode 370, Avg Reward: 229.80, Epsilon: 0.16\n",
+      "Episode 380, Avg Reward: 261.70, Epsilon: 0.15\n",
+      "Episode 390, Avg Reward: 252.10, Epsilon: 0.14\n",
+      "Episode 400, Avg Reward: 151.20, Epsilon: 0.13\n",
+      "Episode 410, Avg Reward: 285.70, Epsilon: 0.13\n",
+      "Episode 420, Avg Reward: 124.30, Epsilon: 0.12\n",
+      "Episode 430, Avg Reward: 138.50, Epsilon: 0.12\n",
+      "Episode 440, Avg Reward: 162.90, Epsilon: 0.11\n",
+      "Episode 450, Avg Reward: 105.30, Epsilon: 0.10\n",
+      "Episode 460, Avg Reward: 193.10, Epsilon: 0.10\n",
+      "Episode 470, Avg Reward: 266.70, Epsilon: 0.09\n",
+      "Episode 480, Avg Reward: 190.10, Epsilon: 0.09\n",
+      "Episode 490, Avg Reward: 114.40, Epsilon: 0.09\n",
+      "Episode 500, Avg Reward: 220.00, Epsilon: 0.08\n",
+      "Episode 510, Avg Reward: 165.10, Epsilon: 0.08\n",
+      "Episode 520, Avg Reward: 193.70, Epsilon: 0.07\n",
+      "Episode 530, Avg Reward: 152.20, Epsilon: 0.07\n",
+      "Episode 540, Avg Reward: 349.00, Epsilon: 0.07\n",
+      "Episode 550, Avg Reward: 293.40, Epsilon: 0.06\n",
+      "Episode 560, Avg Reward: 320.80, Epsilon: 0.06\n",
+      "Episode 570, Avg Reward: 305.20, Epsilon: 0.06\n",
+      "Episode 580, Avg Reward: 241.00, Epsilon: 0.05\n",
+      "Episode 590, Avg Reward: 325.40, Epsilon: 0.05\n",
+      "Episode 600, Avg Reward: 277.50, Epsilon: 0.05\n",
+      "Episode 610, Avg Reward: 213.10, Epsilon: 0.05\n",
+      "Episode 620, Avg Reward: 209.70, Epsilon: 0.04\n",
+      "Episode 630, Avg Reward: 236.20, Epsilon: 0.04\n",
+      "Episode 640, Avg Reward: 302.10, Epsilon: 0.04\n",
+      "Episode 650, Avg Reward: 213.70, Epsilon: 0.04\n",
+      "Episode 660, Avg Reward: 230.80, Epsilon: 0.04\n",
+      "Episode 670, Avg Reward: 372.30, Epsilon: 0.03\n",
+      "Episode 680, Avg Reward: 330.30, Epsilon: 0.03\n",
+      "Episode 690, Avg Reward: 252.50, Epsilon: 0.03\n",
+      "Episode 700, Avg Reward: 209.80, Epsilon: 0.03\n",
+      "Episode 710, Avg Reward: 164.60, Epsilon: 0.03\n",
+      "Episode 720, Avg Reward: 229.90, Epsilon: 0.03\n",
+      "Episode 730, Avg Reward: 292.20, Epsilon: 0.03\n",
+      "Episode 740, Avg Reward: 356.70, Epsilon: 0.02\n",
+      "Episode 750, Avg Reward: 383.90, Epsilon: 0.02\n",
+      "Episode 760, Avg Reward: 418.00, Epsilon: 0.02\n",
+      "Episode 770, Avg Reward: 379.90, Epsilon: 0.02\n",
+      "Episode 780, Avg Reward: 450.70, Epsilon: 0.02\n",
+      "Episode 790, Avg Reward: 409.90, Epsilon: 0.02\n",
+      "Episode 800, Avg Reward: 263.40, Epsilon: 0.02\n",
+      "Episode 810, Avg Reward: 318.60, Epsilon: 0.02\n",
+      "Episode 820, Avg Reward: 349.10, Epsilon: 0.02\n",
+      "Episode 830, Avg Reward: 223.50, Epsilon: 0.02\n",
+      "Episode 840, Avg Reward: 430.40, Epsilon: 0.01\n",
+      "Episode 850, Avg Reward: 327.60, Epsilon: 0.01\n",
+      "Episode 860, Avg Reward: 368.00, Epsilon: 0.01\n",
+      "Episode 870, Avg Reward: 249.60, Epsilon: 0.01\n",
+      "Episode 880, Avg Reward: 376.50, Epsilon: 0.01\n",
+      "Episode 890, Avg Reward: 350.70, Epsilon: 0.01\n",
+      "Episode 900, Avg Reward: 354.20, Epsilon: 0.01\n",
+      "Episode 910, Avg Reward: 435.10, Epsilon: 0.01\n",
+      "Episode 920, Avg Reward: 379.10, Epsilon: 0.01\n",
+      "Episode 930, Avg Reward: 316.60, Epsilon: 0.01\n",
+      "Episode 940, Avg Reward: 438.40, Epsilon: 0.01\n",
+      "Episode 950, Avg Reward: 343.70, Epsilon: 0.01\n",
+      "Episode 960, Avg Reward: 320.00, Epsilon: 0.01\n",
+      "Episode 970, Avg Reward: 329.90, Epsilon: 0.01\n",
+      "Episode 980, Avg Reward: 309.00, Epsilon: 0.01\n",
+      "Episode 990, Avg Reward: 295.90, Epsilon: 0.01\n",
+      "Episode 1000, Avg Reward: 418.80, Epsilon: 0.01\n"
+     ]
+    }
+   ],
+   "source": [
+    "env = gym.make(\"CartPole-v1\")\n",
+    "agent = DDQNTrainer(env)\n",
+    "rewards = agent.train(episodes=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "7ab3610f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Return over 500 episodes: 500.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from matplotlib import animation\n",
+    "from IPython.display import HTML\n",
+    "def eval(policy, episodes):\n",
+    "    rewards = []\n",
+    "    for _ in range(episodes):\n",
+    "        observation, _ = env.reset()\n",
+    "        episode_reward = 0\n",
+    "        episode_over = False\n",
+    "        while not episode_over:\n",
+    "\n",
+    "            with torch.no_grad():\n",
+    "                probs = policy(torch.tensor(observation).float().view(1, -1))\n",
+    "                action = torch.argmax(probs, dim=1).item()\n",
+    "\n",
+    "            observation, reward, terminated, truncated, _ = env.step(action)\n",
+    "            episode_reward += reward\n",
+    "\n",
+    "            episode_over = terminated or truncated\n",
+    "\n",
+    "        rewards.append(episode_reward)\n",
+    "\n",
+    "    print(f\"Average Return over {episodes} episodes: {sum(rewards) / episodes}\")\n",
+    "\n",
+    "    env.close()\n",
+    "eval(agent.q_net, 500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67fa1265",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
