--- a/lunar_lander.ipynb
+++ b/lunar_lander.ipynb
@@ -208,7 +208,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "3.12",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -222,7 +222,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.10"
+      "version": "3.10.12"
     }
   },
   "nbformat": 4,
