--- a/blackjack.ipynb
+++ b/blackjack.ipynb
@@ -22411,6 +22411,178 @@
    "source": [
     "ddqn.eval(episodes=100)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "f0cda77d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn as nn\n",
+    "import torch\n",
+    "import numpy as np\n",
+    "class Model(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.shared = nn.Sequential(\n",
+    "            nn.Linear(4, 128),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(128, 128),\n",
+    "            nn.ReLU()\n",
+    "        )\n",
+    "        \n",
+    "        self.actor = nn.Sequential(\n",
+    "            nn.Linear(128, 2),\n",
+    "            nn.Softmax()\n",
+    "        )\n",
+    "        self.critic = nn.Linear(128, 1)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.shared(x)\n",
+    "        return self.actor(x), self.critic(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f7e1bf7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class A2C():\n",
+    "    def __init__(self, env, actor_critic, optimizer, gamma):\n",
+    "        self.env = env\n",
+    "\n",
+    "        self.actor_critic = actor_critic\n",
+    "        self.optimizer = optimizer\n",
+    "        self.gamma = gamma\n",
+    "        self.critic_loss_fn = nn.MSELoss()\n",
+    "    \n",
+    "    def sample_action(self, observation):\n",
+    "        obs_tensor = torch.from_numpy(np.array(observation)).unsqueeze(0).float()\n",
+    "        probs, value = self.actor_critic(obs_tensor)\n",
+    "        return probs, torch.multinomial(probs, num_samples=1).item(), value.item()\n",
+    "    \n",
+    "    def train(self, episodes, stats_interval):\n",
+    "        losses = []\n",
+    "        rewards = []\n",
+    "        max_reward = 0\n",
+    "\n",
+    "        for e in range(episodes):\n",
+    "            observation, _ = self.env.reset()\n",
+    "\n",
+    "            log_probs = []\n",
+    "            values = []\n",
+    "            episode_rewards = []\n",
+    "            total_episode_reward = 0\n",
+    "\n",
+    "            episode_over = False\n",
+    "            while not episode_over:\n",
+    "\n",
+    "                probs, action, value = self.sample_action(observation)\n",
+    "                observation, reward, terminated, truncated, _ = self.env.step(action)\n",
+    "\n",
+    "                log_probs.append(torch.log(probs[0, action]))\n",
+    "                values.append(value)\n",
+    "\n",
+    "                episode_rewards.append(reward)\n",
+    "                total_episode_reward += reward\n",
+    "\n",
+    "                episode_over = terminated or truncated\n",
+    "            \n",
+    "            rewards.append(total_episode_reward)\n",
+    "            if total_episode_reward > max_reward:\n",
+    "                max_reward = total_episode_reward\n",
+    "                print(f\"New max of {max_reward} in episode {e + 1}\")\n",
+    "\n",
+    "            returns = []\n",
+    "            R = 0\n",
+    "            for r in reversed(episode_rewards):\n",
+    "                R = r + self.gamma * R\n",
+    "                returns.insert(0, R)\n",
+    "\n",
+    "            returns = torch.tensor(returns)\n",
+    "            if returns.size(dim=-1) > 1:\n",
+    "                returns = (returns - returns.mean()) / (returns.std() + 1e-8)\n",
+    "            \n",
+    "            values = torch.tensor(values)\n",
+    "            advantages = returns - values\n",
+    "\n",
+    "            actor_loss = -(torch.sum(torch.tensor(log_probs) * advantages.detach()))\n",
+    "            critic_loss = self.critic_loss_fn(values, returns)\n",
+    "\n",
+    "            loss = actor_loss + 0.5 * critic_loss\n",
+    "            \n",
+    "            self.optimizer.zero_grad()\n",
+    "            loss.backward()\n",
+    "            self.optimizer.step()\n",
+    "\n",
+    "            losses.append(loss.item())\n",
+    "\n",
+    "            if (e + 1) % stats_interval == 0:\n",
+    "                print(f\"Episodes {(e - stats_interval + 1, e)}:\", end=\" \")\n",
+    "                print(f\"Avg Loss- {sum(losses[e-stats_interval+1:e+1])/stats_interval}\", end=\" \")\n",
+    "                print(f\"Avg Reward- {sum(rewards[e-stats_interval+1:e+1])/stats_interval}\")\n",
+    "                \n",
+    "        self.env.close()\n",
+    "\n",
+    "        self.episodes_trained += episodes\n",
+    "\n",
+    "        return rewards, losses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "a842b418",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New max of 17.0 in episode 1\n",
+      "tensor(-1.7277) tensor(1.0541)\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "element 0 of tensors does not require grad and does not have a grad_fn",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[49], line 11\u001b[0m\n\u001b[1;32m      8\u001b[0m optimizer \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39moptim\u001b[38;5;241m.\u001b[39mAdam(actor_critic\u001b[38;5;241m.\u001b[39mparameters(), lr\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1e-3\u001b[39m)\n\u001b[1;32m     10\u001b[0m reinforce \u001b[38;5;241m=\u001b[39m A2C(env, actor_critic, optimizer, gamma\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.99\u001b[39m)\n\u001b[0;32m---> 11\u001b[0m rewards, losses \u001b[38;5;241m=\u001b[39m \u001b[43mreinforce\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43mepisodes\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mEPISODES\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstats_interval\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m500\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[48], line 68\u001b[0m, in \u001b[0;36mA2C.train\u001b[0;34m(self, episodes, stats_interval)\u001b[0m\n\u001b[1;32m     65\u001b[0m loss \u001b[38;5;241m=\u001b[39m actor_loss \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m0.5\u001b[39m \u001b[38;5;241m*\u001b[39m critic_loss\n\u001b[1;32m     67\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptimizer\u001b[38;5;241m.\u001b[39mzero_grad()\n\u001b[0;32m---> 68\u001b[0m \u001b[43mloss\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     69\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptimizer\u001b[38;5;241m.\u001b[39mstep()\n\u001b[1;32m     71\u001b[0m losses\u001b[38;5;241m.\u001b[39mappend(loss\u001b[38;5;241m.\u001b[39mitem())\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/_tensor.py:648\u001b[0m, in \u001b[0;36mTensor.backward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    638\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m has_torch_function_unary(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m    639\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m handle_torch_function(\n\u001b[1;32m    640\u001b[0m         Tensor\u001b[38;5;241m.\u001b[39mbackward,\n\u001b[1;32m    641\u001b[0m         (\u001b[38;5;28mself\u001b[39m,),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    646\u001b[0m         inputs\u001b[38;5;241m=\u001b[39minputs,\n\u001b[1;32m    647\u001b[0m     )\n\u001b[0;32m--> 648\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mautograd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    649\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgradient\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minputs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43minputs\u001b[49m\n\u001b[1;32m    650\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/autograd/__init__.py:353\u001b[0m, in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    348\u001b[0m     retain_graph \u001b[38;5;241m=\u001b[39m create_graph\n\u001b[1;32m    350\u001b[0m \u001b[38;5;66;03m# The reason we repeat the same comment below is that\u001b[39;00m\n\u001b[1;32m    351\u001b[0m \u001b[38;5;66;03m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[1;32m    352\u001b[0m \u001b[38;5;66;03m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[0;32m--> 353\u001b[0m \u001b[43m_engine_run_backward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    354\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtensors\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    355\u001b[0m \u001b[43m    \u001b[49m\u001b[43mgrad_tensors_\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    356\u001b[0m \u001b[43m    \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    357\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    358\u001b[0m \u001b[43m    \u001b[49m\u001b[43minputs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    359\u001b[0m \u001b[43m    \u001b[49m\u001b[43mallow_unreachable\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m    360\u001b[0m \u001b[43m    \u001b[49m\u001b[43maccumulate_grad\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m    361\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/autograd/graph.py:824\u001b[0m, in \u001b[0;36m_engine_run_backward\u001b[0;34m(t_outputs, *args, **kwargs)\u001b[0m\n\u001b[1;32m    822\u001b[0m     unregister_hooks \u001b[38;5;241m=\u001b[39m _register_logging_hooks_on_whole_graph(t_outputs)\n\u001b[1;32m    823\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 824\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mVariable\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_execution_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_backward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# Calls into the C++ engine to run the backward pass\u001b[39;49;00m\n\u001b[1;32m    825\u001b[0m \u001b[43m        \u001b[49m\u001b[43mt_outputs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\n\u001b[1;32m    826\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# Calls into the C++ engine to run the backward pass\u001b[39;00m\n\u001b[1;32m    827\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    828\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m attach_logging_hooks:\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: element 0 of tensors does not require grad and does not have a grad_fn"
+     ]
+    }
+   ],
+   "source": [
+    "import gymnasium as gym\n",
+    "\n",
+    "EPISODES = 2000\n",
+    "\n",
+    "env = gym.make(\"CartPole-v1\", render_mode=\"rgb_array\")\n",
+    "\n",
+    "actor_critic = Model()\n",
+    "optimizer = torch.optim.Adam(actor_critic.parameters(), lr=1e-3)\n",
+    "\n",
+    "reinforce = A2C(env, actor_critic, optimizer, gamma=0.99)\n",
+    "rewards, losses = reinforce.train(episodes=EPISODES, stats_interval=500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da52f1fe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
